[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Dreadnought(BOSS)/Turret1.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Dreadnought(BOSS)/turret.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Dreadnought(BOSS)/Cannon.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Dreadnought(BOSS)/Cannon+5.wav" type="AudioStream" id=4]
[ext_resource path="res://Classes/Samples/LifeBar.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 35 )

[node name="Turret1" type="KinematicBody2D" groups=[
"body",
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, -30.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, 0 )
shape = SubResource( 1 )

[node name="Right" type="Position2D" parent="."]
position = Vector2( 110, 13 )

[node name="cr1" type="Sprite" parent="Right"]
position = Vector2( -72.0001, 0.500122 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -31.0001 )

[node name="Tween" type="Tween" parent="Right"]

[node name="Left" type="Position2D" parent="."]
position = Vector2( 110, -13 )

[node name="cl1" type="Sprite" parent="Left"]
position = Vector2( -72, -0.5 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -30.9999 )

[node name="Tween" type="Tween" parent="Left"]

[node name="SecondShoot" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
rotation = 1.5708
scale = Vector2( 1.7, 1 )

[node name="TextureProgress" parent="Node2D" instance=ExtResource( 5 )]
margin_left = -27.0745
margin_top = 27.712
margin_right = 24.9255
margin_bottom = 39.712

[connection signal="tween_completed" from="Right/Tween" to="." method="_RightShootBack"]
[connection signal="tween_completed" from="Left/Tween" to="." method="_LeftShootBack"]
[connection signal="timeout" from="SecondShoot" to="." method="SecondShoot"]
